fix: prevent box-shadow from overflowing on firefox

--- a/src/components/atoms/Strong/Strong.module.css
+++ b/src/components/atoms/Strong/Strong.module.css
@@ -1,5 +1,5 @@
 .strong {
-  font-weight: 600;
   box-shadow: inset 0 -0.125em 0 0 #fff,
     inset 0 -0.5em 0 0 theme('colors.indigo.300');
+  @apply box-decoration-clone font-semibold;
 }
